Sync game info to scoreboard, Add player_game_total Objective