@@ -4,13 +4,10 @@ import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
 import xiao.battleroyale.common.game.stats.StatsConfigHelper.DefaultObjectiveName;
 import xiao.battleroyale.config.common.game.stats.StatsConfigManager.StatsConfig;
-import xiao.battleroyale.config.common.game.stats.scoreboard.MainObjectiveEntry;
-import xiao.battleroyale.config.common.game.stats.scoreboard.ScoreboardEntry;
-import xiao.battleroyale.config.common.game.stats.scoreboard.SecondObjectiveEntry;
-import xiao.battleroyale.config.common.game.stats.scoreboard.SpecialObjectiveEntry;
+import xiao.battleroyale.config.common.game.stats.scoreboard.*;
 
 import java.nio.file.Paths;
-import java.util.Arrays;
+import java.util.List;
 
 import static xiao.battleroyale.util.JsonUtils.writeJsonToFile;
 
@@ -28,6 +25,7 @@ public class DefaultStats {
     private static JsonObject generateDefaultStatsConfig0() {
         ScoreboardEntry scoreboardEntry = new ScoreboardEntry(false, false, 20,
                 100 / 20f, 1000,
+                false, "", null,
                 20 * 3, null,
                 null, null, null,
                 "", "");
@@ -41,7 +39,8 @@ public class DefaultStats {
     private static JsonObject generateDefaultStatsConfig1() {
         ScoreboardEntry scoreboardEntry = new ScoreboardEntry(true, false, 20,
                 100 / 20f, 1000,
-                20 * 3, Arrays.asList(DefaultObjectiveName.PLAYER_ATTACK_RATE, DefaultObjectiveName.PLAYER_KD, DefaultObjectiveName.PLAYER_WIN_RATE),
+                true, DefaultObjectiveName.GAME_INFO, new GameInfoObjectiveEntry(DefaultObjectiveName.PLAYER_TOTAL, DefaultObjectiveName.ALIVE, DefaultObjectiveName.GAME_TIME),
+                20 * 3, List.of(DefaultObjectiveName.GAME_INFO),
                 new MainObjectiveEntry(
                         DefaultObjectiveName.PLAYER_TO_PLAYER_DAMAGE, DefaultObjectiveName.OTHER_TO_PLAYER_DAMAGE, DefaultObjectiveName.PLAYER_DAMAGE_BY_PLAYER, DefaultObjectiveName.PLAYER_DAMAGE_BY_OTHER,
                         DefaultObjectiveName.PLAYER_KNOCK_PLAYER, DefaultObjectiveName.OTHER_KNOCK_PLAYER,
@@ -54,6 +53,7 @@ public class DefaultStats {
                 new SecondObjectiveEntry(
                         DefaultObjectiveName.PLAYER_ATTACK_RATE,
                         DefaultObjectiveName.PLAYER_KD,
+                        DefaultObjectiveName.PLAYER_GAME_TOTAL,
                         DefaultObjectiveName.PLAYER_WIN_RATE
                 ),
                 new SpecialObjectiveEntry(
